# tmc2209-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
examples/: basic.rs  sensorless_homing.rs  stealthchop.rs
src/: crc.rs  datagram.rs  driver.rs  error.rs  lib.rs  util.rs
src/registers/: chopconf.rs  coolconf.rs  drv_status.rs  factory_conf.rs  gconf.rs  gstat.rs  ifcnt.rs  ihold_irun.rs  ioin.rs  mod.rs  mscnt.rs  mscuract.rs  otp_prog.rs  otp_read.rs  pwm_auto.rs  pwm_scale.rs  pwmconf.rs  sg_result.rs  sgthrs.rs  slaveconf.rs  tcoolthrs.rs  tpowerdown.rs  tpwmthrs.rs  tstep.rs  vactual.rs
